fixed bugs and added password reset apis
